--- a/allstate.css
+++ b/allstate.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  font-family: Roboto;
+  font-family: 'Roboto', sans-serif;
   background-color: white;
   color: black;
   font-size: 15px;
@@ -22,16 +22,12 @@ ul {
 }
 
 .container {
-  /* width: 90%;
-  height: 100vh; */
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 90%;
-  height: 100vh;
-  /* max-height: max-content; */
-  max-width: 1250px;
+  width: 90%; 
+  height: 100vh; 
   margin: auto;
   border: 2px solid yellow;
 }
@@ -50,8 +46,8 @@ h2 {
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  height: 80px;
-  padding: 20px 0;
+  height: 10vh; 
+  padding: 1% 0;
   font-size: 14px;
   border: 2px solid olive;
 }
@@ -89,7 +85,7 @@ h2 {
   border: 2px solid rgb(167, 163, 163);
   border-radius: 20px;
   background-color: whitesmoke;
-  transition: 0.15s transform ease;
+  transition: transform 0.3s ease, opacity 0.3s ease;
 }
 
 .right-menu .contact-us:hover {
@@ -97,22 +93,20 @@ h2 {
   opacity: 0.9;
 }
 
-/* Hero*/
+/* Hero */
 .hero {
-  width: 90%;
-  height: 100%;
+  width: 100%;
+  height: 90vh; 
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
   align-items: center;
-  /* margin-bottom: 20px; */
   border: 2px solid rgb(219, 13, 168);
 }
 
 .hero-content {
   margin: 40px 0 20px 0;
   width: 50%;
-  height: 22%;
+  height: auto;
   display: flex;
   text-align: center;
   flex-direction: column;
@@ -120,15 +114,13 @@ h2 {
   border: 2px solid blue;
 }
 
-.hero-img {
-  width: 100%;
-  height: 80%;
-  border: 2px solid rgb(12, 224, 125);
-}
 
-.hero-img img {
-  width: 100%;
-  height: 100%;
+.hero-img {
+  width: 100%; 
+  height: 70%; 
   border: 2px solid red;
-  /* background: url("Images/estate2.jpg") no-repeat center/contain; */
+  background: url("asset/estate2.jpg");
+  background-repeat:no-repeat;
+  background-position:50% 80%; ;
+  background-size: cover; 
 }
